[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlagent"
version = "0.0.1"
description = "A Toolkit for building SQL Agents that use Python to interact with a SQL database."
authors = [
    {name = "Vijay Ramasami", email = "rvijayc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "IPython",
    "matplotlib",
    "docker",
    "RestrictedPython",
    "uuid",
    "loguru",
    "pyyaml",
]
license = {text = "MIT"}
license-files = ["LICENSE", "sqlagent/third_party/AgentRun/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["sqlagent"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-benchmark", "grandalf", "pygraphviz"]

[tool.license-checker]
allowed_licenses = ["Apache-2.0"]
