[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lg_agents"
version = "0.0.13"
description = "A Toolkit for building SQL Agents that use Python to interact with a SQL database."
authors = [
    {name = "Vijay Ramasami", email = "rvijayc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain==0.3.26",
    "langchain-openai==0.3.16",
    "langgraph==0.4.3",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.72",
    "IPython",
    "matplotlib",
    "docker",
    "RestrictedPython",
    "uuid",
    "loguru",
    "pyyaml",
    "agentrun_plus>=0.2.21",
    "tqdm"
]
license = {text = "MIT"}
license-files = ["LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["lg_agents"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-benchmark", "grandalf", "pygraphviz"]

[tool.license-checker]
allowed_licenses = ["Apache-2.0"]
